# rofr

./: CHANGELOG.md  Cargo.toml  README.md  compose.yaml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/weather-station/: Cargo.toml
examples/weather-station/src/: main.rs
nodal/: Cargo.toml
nodal-macros/src/: lib.rs
nodal/examples/: weather_station.rs
nodal/src/: client.rs  endpoint.rs  header.rs  lib.rs  stream.rs
nodal/tests/: test_integration.rs
rfd/: RFD 2 Principles.md
rofr/: Cargo.toml  README.md
rofr-macros/: Cargo.toml
rofr-macros/src/: lib.rs
rofr/src/: client.rs  endpoint.rs  header.rs  lib.rs
rofr/tests/: test_integration.rs
