[package]
name = "nodal"
version = "0.1.0"
edition = "2024"

[dependencies]
nodal-macros = { version = "^0.1.0", path = "../nodal-macros" }
async-nats = "0.47.0"
async-trait = "0.1.89"
bytes = "1"
futures = "0.3"
tokio = "1.51"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.44"
schemars = "1.2"

[dev-dependencies]
tokio = { version = "1.51", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.10"
