[package]
name = "rofr-macros"
authors = ["Liam Kinne <liam@umi.engineering>"]
description = "Macros for RoFr"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
serde_json = "1.0"
