[package]
name = "rofr"
authors = ["Liam Kinne <liam@umi.engineering>"]
description = "Framework for building robotics APIs that use NATS messaging"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/Flux-Robotics/rofr"
readme = "README.md"

[dependencies]
rofr-macros = { version = "^0.1.1", path = "../rofr-macros" }
async-nats = { version = "0.47", default-features = false, features = ["jetstream", "server_2_10", "server_2_11", "server_2_12", "service"] }
async-trait = "0.1"
bytes = "1"
futures = "0.3"
tokio = { version = "1.51", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
ulid = "1.2"
metrics = { version = "0.24", optional = true }

[dev-dependencies]
nats-server = { git = "https://github.com/nats-io/nats.rs" }

[features]
default = ["metrics"]

metrics = ["dep:metrics"]
